# chatbot-example-kosta

./: .env.example  .gitignore  CLAUDE.MD  EXECUTION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
000.settings/: 00.setting.md  01.test.py  googleApiKeyTest.py
01.settings/: 00.setting.md  01.test.py
02.single-turn/: 01.single-turn.py  02.system_prompt.py
03.multi-turn/: 01.multi-turn.py  02.no_history.py  03.with_history.py
04.zero-shot-prompting/: 01.zero-shot.py
05.one-shot-prompting/: 01.one-shot.py
06.few-shot-prompting/: 01.few-shot.py
07.streamlit/: 00.setting.md  01.streamlit.py  02.streamlit_chat.py
08.langchain-basic/: 00.setting.md  01.langchain.py  02.langsmith_example.py  03.message_history.py  04.langchain_vs_openai.py  05.langchain_streaming.py  README.md
09.lcel-chain/: 01.lcel_basic.py  02.lcel_parser.py  03.prompt_template.py  04.prompt_interactive.py  05.lcel_complex_chain.py
10.langchain-tools/: 01.tool_basic.py  02.tool_agent.py  03.agent_routing.py  04.tool_wikipedia.py
11.cs-chatbot/: 01.cs_chatbot.py  02.cs_limit.py
12.single-pdf-rag/: APP_SUMMARY.md  SOURCE_SUMMARY.md  app.py  init_db.py  step1_load_pdf.py  step2_chunking.py  step3_embedding.py  step4_vector_store.py  step5_rag_chain.py
13.chatbot-examples/: 01.language_tutor.py  02.restaurant_recommender.py
211.single-turn/: 01.single-turn.py  singleturnTest.py
212.multi-turn/: 01.multi-turn.py  multiturnTest.py
213.zero-shot-prompting/: 01.zero-shot.py  zeroshotTest.py
214.one-shot-prompting/: 01.one-shot.py  (+1 more)
(+49 files in other folders)
